# sonos-cli

./: .gitignore  Cargo.toml  README.md
src/: discovery.rs  main.rs  util.rs
